<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Manager</string>
    <string name="hello_world">Hello world! It\'s Bryan Here</string>
    <string name="contact_details">Please enter your contact\'s details in the fields below. Required fields are marked by an asterisk (*)</string>
    <string name="required_fields">* means the field is required</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name *</string>
    <string name="surname">Surname *</string>
    <string name="phone_number">Phone Number *</string>
    <string name="email_address">Email Address</string>
    <string name="home_address">Physical Address</string>
    <string name="add_contact">Add Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="add_new_contact">+</string>
    <string name="view_all">View All</string>
    <string name="cancel">Cancel</string>
    <string name="back">&lt;</string>
    <string name="all_contacts">Contacts List</string>
    <string name="details_name"> First Name</string>
    <string name="details_surname"> Last Name</string>
    <string name="details_phone"> Phone Number</string>
    <string name="details_email"> Email Address</string>
    <string name="details_address"> Home Address</string>
    <string name="back_to_contacts"> Back To Contacts </string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="title_activity_new_contact">New Contact</string>

</resources>
