<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="sans-serif-light"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.myandroid.itsbryan.addressbookapp.activities.ContactDetailsActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cd_back1"
            android:textSize="20sp"
            android:textColor="#fff"
            android:background="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_launcher"
            android:text="@string/back"/>
        <TextView
            android:textSize="25sp"
            android:textColor="#0099CC"
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Contact Details"/>
    </LinearLayout>


    <LinearLayout
        android:layout_below="@+id/header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View style="@style/Divider"/>
        <TextView
            android:id="@+id/cd_name_tv"
            android:textSize="15dp"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/details_name"/>
        <TextView
            android:id="@+id/cd_surname_tv"
            android:textSize="15sp"
            android:fontFamily="sans-serif-light"
            android:layout_width="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/details_surname"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/cd_phone_tv"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/details_phone"/>
        <TextView
            android:id="@+id/cd_email_tv"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/details_email"/>
        <TextView
            android:id="@+id/cd_address_tv"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/details_address"/>

        <Button
            android:id="@+id/cd_back2"
            android:textSize="15sp"
            android:textColor="#fff"
            android:fontFamily="sans-serif-light"
            android:background="#0099CC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:height="50dp"
            android:width="180dp"
            android:text="@string/back_to_contacts"/>
    </LinearLayout>

</RelativeLayout>
