<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.myandroid.itsbryan.addressbookapp.activities.NewContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".ContactDetailsActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/header"
                    android:layout_alignParentTop="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/nc_back"
                        android:textSize="20sp"
                        android:textColor="#fff"
                        android:background="#000"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_launcher"
                        android:text="@string/back"/>
                    <TextView
                        android:textSize="25sp"
                        android:textColor="#0099CC"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="New Contact"/>
                </LinearLayout>

                <View style="@style/Divider"/>

                <TextView
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/contact_details"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPersonName"
                    android:id="@+id/name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:layout_marginTop="25dp"
                    android:hint="@string/name"/>
                <EditText
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/surname_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:layout_marginTop="25dp"
                    android:hint="@string/surname"/>
                <EditText
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-light"
                    android:inputType="phone"
                    android:id="@+id/phone_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:layout_marginTop="25dp"
                    android:hint="@string/phone_number"/>
                <EditText
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/email_edittext"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:layout_marginTop="25dp"
                    android:hint="@string/email_address"/>
                <EditText
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPostalAddress"
                    android:singleLine="false"
                    android:maxLines="5"
                    android:id="@+id/homeaddress_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:layout_marginTop="25dp"
                    android:hint="@string/home_address"/>

                <LinearLayout
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="0"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/nc_add_contact"
                        android:textColor="#fff"
                        android:background="#0099CC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:height="50dp"
                        android:width="180dp"
                        android:text="@string/add_contact"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/white" />
                    <Button
                        android:id="@+id/nc_cancel"
                        android:layout_width="wrap_content"
                        android:textColor="#fff"
                        android:background="#FF3333"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:height="50dp"
                        android:width="180dp"
                        android:text="@string/cancel"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
